package 创建型模式.简单工厂模式;

public class ConcreteProductA extends Product{
    /**
     * 实现业务方法
     */
    @Override
    public void methodDiff() {
        //业务方法的实现
    }
}
