package 创建型模式.简单工厂模式;

public abstract class Product {
    /**
     * 所有产品类的公共业务方法
     */
    public void methodSame(){

    }

    /**
     * 声明抽象业务方法
     */
    public abstract void methodDiff();
}
