@startuml
'https://plantuml.com/class-diagram

abstract class Product

class ConcreteProductA {
+ methodDiff() : void
}
class ConcreteProductB {
+ methodDiff() : void
}


class Factory{
+ static getProduct(String arg) : Product
}

Factory ..> ConcreteProductA : create
Factory ..> ConcreteProductB : create

Product <|-- ConcreteProductA
Product <|-- ConcreteProductB


@enduml